# llvm-nnsu-2024

./: tr.txt
clang/labs/lab1/: CMakeLists.txt
clang/labs/lab1/akopyan_zal/: AddAttrAlwaysInline.cpp  CMakeLists.txt
clang/labs/lab1/alexseev_danila/: CMakeLists.txt  deprecatedWarning.cpp
clang/labs/lab1/balyasov_ivan/: CMakeLists.txt  rename_identifiers.cpp
clang/labs/lab1/bend_tatiana/: CMakeLists.txt  PrintFunctionNames.cpp
clang/labs/lab1/bodrov_daniil/: CMakeLists.txt  ClassPrinter.cpp
clang/labs/lab1/bonyuk_peter/: CMakeLists.txt  DepWarning.cpp
clang/labs/lab1/borovkov_sergey/: CMakeLists.txt  renamedfile.cpp
clang/labs/lab1/durandin_vladimir/: AlwaysInlineAttributePlugin.cpp  CMakeLists.txt
clang/labs/lab1/isaev_dmitriy/: AlwaysInline.cpp  CMakeLists.txt
clang/labs/lab1/ivanov_nikita/: CMakeLists.txt  deprecatedMatcher.cpp
clang/labs/lab1/kalinin_alexandr/: CMakeLists.txt  deprWarnPluginKalinin.cpp
clang/labs/lab1/kashirin_alexander/: CMakeLists.txt  Rename_Plugin.cpp
clang/labs/lab1/kazantsev_evgeny/: CMakeLists.txt  DeprecatedPlug.cpp
clang/labs/lab1/korablev_nikita/: CMakeLists.txt  RenameIdentificator.cpp
clang/labs/lab1/kosarev_egor/: CMakeLists.txt  always_inline.cpp
clang/labs/lab1/kostanyan_arsen/: CMakeLists.txt  PrintNames.cpp
clang/labs/lab1/kostin_artem/: CMakeLists.txt  depr_plugin.cpp
clang/labs/lab1/kozyreva_ekaterina/: CMakeLists.txt  PrintClassPlugin.cpp
clang/labs/lab1/kruglov_alexey/: CMakeLists.txt  RenameID.cpp
clang/labs/lab1/kulaev_zhenya/: AttrubuteAlways.cpp  CMakeLists.txt
clang/labs/lab1/kulagin_aleksandr/: CMakeLists.txt  alwaysInline.cpp
clang/labs/lab1/kulikov_artem/: CMakeLists.txt  DeprecatedWarning.cpp
clang/labs/lab1/kurdina_julia/: AddWarning.cpp  CMakeLists.txt
clang/labs/lab1/kuznetsov_artyom/: CMakeLists.txt  PrintClassMembers.cpp
llvm/labs/: CMakeLists.txt
llvm/labs/lab2/: CMakeLists.txt
(+417 files in other folders)
